--- a/src/data/grammar/mtg/community/tournament-hijinks.yaml
+++ b/src/data/grammar/mtg/community/tournament-hijinks.yaml
@@ -103,7 +103,7 @@ dumbScenario:
 - 'covertly collect information on #pro# in order to [_rule:learn their shuffling
   routine,get a better idea of what they look like naked,know what hate cards to board
   in against them]#_rule#'
-- infiltrate WOTC headquarters and destroy the reserved list
+- infiltrate WOTC headquarters and [_act:destroy the reserved list,trash MaRo's desk,pee in the Mana Pool,steal the Shivan Dragon statue,fall asleep in The Pit]#_act#
 - 'teach them how to beat #deck#'
 - fix MTGO so that it works properly
 - 'help them complete their #realBadCard# playset'
