--- a/src/data/grammar/mtg/story/mtg-characters.yaml
+++ b/src/data/grammar/mtg/story/mtg-characters.yaml
@@ -136,6 +136,12 @@
     "Venser"
   ],
 
+  "characterFirstNameOrMonoOrDisyllabic": [
+    "#characterFirstName#",
+    "#characterMonosyllabic#",
+    "#characterDisyllabic#"
+  ],
+
   "commonCharacterFirstName": [
   	"Agathe",
   	"Borzard",
