--- a/src/data/grammar/vocab/numbers.yaml
+++ b/src/data/grammar/vocab/numbers.yaml
@@ -55,7 +55,8 @@
         "fifth",
         "sixth",
         "tenth",
-        "eighty-sixth"
+        "eighty-sixth",
+        "last"
     ],
     "num1-999": [
         "#num1-9#",
