--- a/src/data/grammar/headlines/mtg-flavor-headline.yaml
+++ b/src/data/grammar/headlines/mtg-flavor-headline.yaml
@@ -18,6 +18,19 @@ magicStoryPlotAdj:
 - remarkable
 - fabled
 - colorful
+- hilarious
+- ill-fated
+- ill-advised
+- tedious
+- questionable
+- unplanned
+- predictable
+- unremarkable
+- phoned-in
+- off-script
+- poorly-conceived
+- tragicomic
+- overblown
 - "#adj#"
 
 unusualCharacter:
@@ -34,7 +47,7 @@ magicRealm:
 - "the #adjStorybook.capitalizeAll# #placeNoun.capitalizeAll#"
 
 originStoryOverview: "#character#'s [_originStory:origin story,first adventure,humble beginning,#magicStoryPlotAdj# triumph]#_originStory#"
-originStoryDetails: "[_fate:capturing,rescuing,locating,search for,quest for,#collectiveActionOrRealm# of,#collectiveActionOrRealm# of]#_fate.capitalizeAll# [_what:the #mcGuffin.capitalizeAll#,the #count# #mcGuffin.capitalizeAll#,#unusualCharacter#,#unusualCharacter#]#_what#"
+originStoryDetails: "[_fate:capturing,rescuing,locating,search for,quest for,#collectiveActionOrRealm# of,#collectiveActionOrRealm# of]#_fate.capitalize# [_what:the #mcGuffin.capitalizeAll#,the #count.capitalize# #mcGuffin.capitalizeAll#,#unusualCharacter#,#unusualCharacter#]#_what#"
 
 magicStorylineHighlight:
 - "#character#'s [_adj:#adj#,#adj#,strangely #adj#,secret,fabled,legendary,infamous,terrible,heartwarming,tawdry]#_adj# [_past:past,history,backstory,rivalry,partnership,clash]#_past# with #character# finally [_verbed:revealed,explained,uncovered,divulged,explored,exposed]#_verbed#"
