--- a/src/data/grammar/vocab/verbs/verbs.yaml
+++ b/src/data/grammar/vocab/verbs/verbs.yaml
@@ -16,7 +16,7 @@
     "belch", "emerge", "embroider", "scream", "dance", "collapse", "appear", "disappear", "sneeze", "arrive", "exist", "fall",
     "rise", "revolt", "smile", "smirk", "scowl", "awaken", "prevail", "descend", "retreat", "negotiate", "stare", "howl", "skulk",
     "snicker", "groan", "cough", "listen", "leave", "condescend", "wish", "shiver", "juggle", "crackle", "drip", "explode", "drool",
-    "snore", "equivocate", "starve", "lollygag", "pretend", "live", "think", "dream", "daydream", "pantomime"
+    "snore", "equivocate", "starve", "lollygag", "pretend", "live", "think", "dream", "daydream", "pantomime", "suffer", "drool", "blink"
   ],
   "verbBothTransitive": [
     "approach","shuffle", "kill", "observe", "grow", "swallow", "transform", "forget", "remember", "study", "misunderstand",
@@ -41,7 +41,7 @@
     "belched", "emerged", "embroidered", "screamed", "danced", "collapsed", "appeared", "disappeared", "sneezed", "arrived", "existed", "fell",
     "rose", "revolted", "smiled", "smirked", "scowled", "awakened", "prevailed", "descended", "retreated", "negotiated", "stared", "howled",  "skulked",
     "snickered", "groaned", "coughed", "listened", "left", "condescended", "wished", "shivered", "juggled", "dripped", "exploded", "drooled", "snored",
-    "equivocated", "starved", "lollygagged", "pretended", "lived", "thought", "dreamed", "daydreamed", "pantomimed",
+    "equivocated", "starved", "lollygagged", "pretended", "lived", "thought", "dreamed", "daydreamed", "pantomimed", "suffered", "drooled", "blinked"
   ],
   "verbBothTransitivePastTense": [
     "approached","shuffled", "killed", "observed", "grew", "swallowed", "transformed", "forgot", "remembered", "studied", "misunderstood",
@@ -66,7 +66,7 @@
     "belching", "emerging", "embroidering", "screaming", "dancing", "collapsing", "appearing", "disappearing", "sneezing", "arriving", "existing", "falling",
     "rising", "revolting", "smiling", "smirking", "scowling", "awakening", "prevailing", "descending", "retreating", "negotiating", "staring", "howling", "skulking",
     "snickering", "groaning", "coughing", "listening", "leaving", "condescending", "wishing", "shivering", "juggling", "dripping", "exploding", "drooling", "snoring",
-    "equivocating", "starving", "lollygagging", "pretending", "living", "thinking", "dreaming", "daydreaming", "pantomimed"
+    "equivocating", "starving", "lollygagging", "pretending", "living", "thinking", "dreaming", "daydreaming", "pantomiming", "suffering", "drooling", "blinking"
   ],
   "verbBothTransitiveGerund": [
     "approaching","shuffling", "killing", "observing", "growing", "swallowing", "transforming", "forgetting", "remembering", "studying", "misunderstanding",
