gathering link URL variety; vocab; minor fixes

--- a/src/data/grammar/headlines/clickbait.yaml
+++ b/src/data/grammar/headlines/clickbait.yaml
@@ -17,7 +17,7 @@ clickbait:
 - "#clickbaitShocker.capitalizeAll#"
 
 clickbaitShocker:
-- "#pro# [_picked:first picked,last picked,wheeled,drafted,topdecked,morphed]#_picked#
+- "#pro# [_picked:first picked,last picked,wheeled,drafted,topdecked,hate drafted,windmill slammed,morphed]#_picked#
   #randomAnyCard#[_challenge: and you won't believe,. You'll be floored by,.
   Guess,. Find out,. #pros.capitalizeAll# are still talking about#]#_challenge.capitalize# [_what:what
   happened next,what #pro.capitalize# said next,what #pro.capitalize# did next,why
