--- a/src/data/grammar/mtg/community/mtg-pros.yaml
+++ b/src/data/grammar/mtg/community/mtg-pros.yaml
@@ -240,8 +240,8 @@
   "website": [
     "Pojo Dot [_tld:Org,Net,Gov]#_tld#",
     "[_domain:#creatureTypes#,#itemNoun#]#_domain.capitalizeAll# Dot Com",
-    "MTG Salvation Dot com",
-    "Good Gamery Dot com"
+    "MTG Salvation Dot Com",
+    "Good Gamery Dot Com"
   ],
   "otherTeamPrefix": [
     "#cardCategory.capitalizeAll#",
