--- a/src/data/grammar/mtg/story/mtg-locations.yaml
+++ b/src/data/grammar/mtg/story/mtg-locations.yaml
@@ -154,5 +154,6 @@
       "Wirewood"
   ],
   "storyLocation": ["#plane#", "#nonPlaneLocation#"],
-  "nonPlaneStoryLocation": ["#nonPlaneLocation#", "#minorStoryLocation#"]
+  "nonPlaneStoryLocation": ["#nonPlaneLocation#", "#minorStoryLocation#"],
+  "randomMtgLocation": ["#plane#", "#nonPlaneLocation#", "#minorStoryLocation#"]
 }
