--- a/src/data/grammar/headlines/mtg-magic-online-headline.yaml
+++ b/src/data/grammar/headlines/mtg-magic-online-headline.yaml
@@ -21,6 +21,7 @@ mtgoTwitterStyleHeadlineContent:
 - "#cardPunEventInvitation#"
 - "#replyWithCard#"
 - "#cardOneOff#"
+- "#mtgoStyleAnnouncement#"
 
 ##### theXOfYHasZ ######
 
@@ -172,6 +173,41 @@ _replyCardCategory:
  - "[#searchableCardCategoryCustomQuery#][#_customQuery.cardSearchCustomQuery#][_replyCardShortDescription:#_cardCategory#][_replyCardDescription:#_cardCategory#]"
  - "[#creatureSearch#][_replyCardShortDescription:#_cardSubtype1#][_replyCardDescription:#_cardSubtype1# from #_cardSet1#]"
  - "[#CARDFINDER.randomCard#][_replyCardShortDescription:#_cardType1.lowercase#,#_cardSet1#][_replyCardDescription:#_cardType1.lowercase# from #_cardSet1#]"
+
+banSomethingAnnouncement:
+- |
+  [_very:very,extremely,incredibly][_very:#_very#,#_very.allCaps#][_wrong:wrong before,mistaken,confused last time]
+  [_reaction:happy,sad,upset,#_very# happy,#mood#,shut up for a while,stop complaning,go crazy,quit magic]
+  [_should:should,will probably,might][_targetPerson:#miscPersonSingular#,#peoplePlural#]
+  [_opinion:great,awful,terrible,misguided,disastrous,ill-advised,crazy][_decision:decision,idea,change,move]
+  [_mistake:mistake,omission,error][_bannedUnbannedAgain:banned again,unbanned again,banned. Again,unbanned. Again][_dyingWhat:Magic,#_format#][_banUnban:ban,unban][_trainwreck:trainwreck,disaster,giant mess]
+  [_becauseWhy:We have no idea,Why not,Because #_dyingWhat# is dying,Because we don't care anymore,No reason,Because we can't #_banUnban# now.,Because we can't #_banUnban# #randomCardAlone# now,Because it's too late to #_banUnban# #randomCardAlone# now,Because we can't turn back now,Because #_format# is a #_trainwreck#,Because it doesn't really matter anymore,No reason]
+  [_nevermind:nevermind,nevermind that,forget that,maybe not,I think this is a typo,we're going to have a long discussion with #officialEntity# about this]
+  [_actuallyNevermind:Actually#comma# #_nevermind#,Wait#comma# #_nevermind#,Hold on a second. #_nevermind.capitalize#]
+  [_banStatus:banned,banned,banned,banned,unbanned,unbanned,unbanned,unbanned,now legal,#_bannedUnbannedAgain#,#_bannedUnbannedAgain#,still banned,now legal]
+  [_monthsYears:months,years][_tempBanDuration:for one day,for one week,for one month,until #officialEntityPerson# gets back from vacation]
+  [_followUp:,,,,,,,, This may be a mistake., We're not sure why., We probably should have mentioned this in the last announcement., #_actuallyNevermind#., This corrects an #_mistake# from #count# #_monthsYears# ago., This was #officialEntity#'s idea., We hope you're happy., But only #_tempBanDuration#., It turns out we were #_very# wrong about this last time., This #_should# make #_targetPerson# #_reaction#., Personally, I think this is a #_opinion# #_decision#, Why? #_becauseWhy#]  
+  {newline}{newline}
+  #_banTarget# #_is# #_banStatus#.#_followUp#
+
+banCardAnnouncement: "[_is:is][_banTarget:#randomCardAlone#]#banSomethingAnnouncement#"
+
+banFormatAnnouncement:
+- |
+  [_nonspecificRulings:No changes.][_announcement:#banCardAnnouncement#,#banCardAnnouncement#,#banCardAnnouncement#,#banCardAnnouncement#,#banCardAnnouncement#,#banCardAnnouncement#,#_nonspecificRulings#]
+  {newline}{newline}
+  #_format#:
+  [_moreBans:,,,#banCardAnnouncement#,#banCardAnnouncement#,#banCardAnnouncement##banCardAnnouncement#]#_moreBans#
+  [_is:is][_target:#randomCardAlone#,#randomCardAlone#,#randomCardAlone#,#randomCardAlone#,#randomCardAlone#,#randomCardAlone#,#randomCardAlone#,#randomCardAlone#,#mtgQuestionablePractice#,#disqualifyingAction#,#person#][_banTarget:#_target.capitalize#]#banSomethingAnnouncement#
+
+mtgoStyleAnnouncement:
+- |
+  [_format1:#format#][_format2:#alternativeConstructedFormat#,#alternativeDraftFormat#][_format3:#format#,All other formats]
+  Announcement Date: #CONTENT.currentFullDate#
+  {newline}
+  [_format:#_format1#]#banFormatAnnouncement#[_format:#_format2#][_second:,{newline}#banFormatAnnouncement#][_format:{newline}#_format3#][_third:,,#banFormatAnnouncement#]#_second##_third#
+  {newline}{newline}{newline}
+  Effective Date: [_date:#CONTENT.randomUpcomingMonthDay##comma# #CONTENT.currentYear#]#_date#
 
 cardOneOff:
 - |
